--- a/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Florida.ipynb
+++ b/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Florida.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
    "outputs": [],
    "source": [
     "#Elimino la columna pics y resp \n",
-    "df=df.drop(['pics','resp'],axis=1)"
+    "df = df.drop(['pics','resp'],axis=1)"
    ]
   },
   {
@@ -250,10 +250,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Elimino duplicados y nulos \n",
+    "\n",
     "# elimino duplicados del df \n",
-    "import pandas as pd \n",
     "df_sin_duplicados = df.drop_duplicates()\n",
+    "\n",
     "#elimino nulos \n",
     "df_clean = df_sin_duplicados.dropna(subset=['text'])"
    ]
@@ -267,15 +267,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_9696\\971041964.py:6: DeprecationWarning: datetime.datetime.utcfromtimestamp() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.fromtimestamp(timestamp, datetime.UTC).\n",
-      "  times.append(datetime.datetime.utcfromtimestamp(data).strftime('%d/%m/%y %H:%M:%S'))\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_9696\\971041964.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_26560\\513605724.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -286,7 +278,7 @@
    ],
    "source": [
     "import datetime\n",
-    "# Normalizacion de la columna time\n",
+    "\n",
     "# Normalizamos la columna time creando la columna time_normalizado con la fecha en el formato %d/%m/%y %H:%M:%S \n",
     "times = [] \n",
     "for data in df_clean['time']/1000 :\n",
@@ -431,22 +423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_9696\\315341314.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  df_clean['time_normalizado'] = pd.to_datetime(df_clean['time_normalizado'])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_9696\\315341314.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_26560\\315341314.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df_clean['time_normalizado'] = pd.to_datetime(df_clean['time_normalizado'])\n",
+      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_26560\\315341314.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -462,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +464,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,26 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_9696\\2335549588.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_clean[\"time_normalizado\"] = pd.to_datetime(df_clean[\"time_normalizado\"])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\alejo\\AppData\\Local\\Temp\\ipykernel_9696\\2335549588.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_26560\\1958986005.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -519,17 +493,67 @@
     }
    ],
    "source": [
-    "\n",
-    "# Convertir la columna \"time_normalizado\" a datetime si aún no lo está\n",
-    "df_clean[\"time_normalizado\"] = pd.to_datetime(df_clean[\"time_normalizado\"])\n",
-    "\n",
     "# Extraer el año de la columna \"time_normalizado\" y crear una nueva columna \"year\"\n",
     "df_clean[\"year\"] = df_clean[\"time_normalizado\"].dt.year\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Valores que deseas conservar en la columna \"year\"\n",
+    "valores_a_mantener = [2014, 2015, 2016 , 2017, 2018 , 2019 , 2020 , 2021]\n",
+    "\n",
+    "# Eliminar los valores de la columna \"year\" que no están en la lista de valores_a_mantener\n",
+    "df_clean1 = df_clean[df_clean[\"year\"].isin(valores_a_mantener)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eliminamos la columna year\n",
+    "df_final_florida = df_clean1.drop(['year'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1649037, 7)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# verificamos el tamaño del df\n",
+    "df_final_florida.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cambio el nombre de la columna gmap_id a business_id y time_normalizado a date\n",
+    "df_final_florida.rename(columns={'gmap_id': 'business_id', 'time_normalizado': 'timestamp'}, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -558,9 +582,8 @@
        "      <th>time</th>\n",
        "      <th>rating</th>\n",
        "      <th>text</th>\n",
-       "      <th>gmap_id</th>\n",
-       "      <th>time_normalizado</th>\n",
-       "      <th>year</th>\n",
+       "      <th>business_id</th>\n",
+       "      <th>timestamp</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -573,7 +596,6 @@
        "      <td>Update: Their “reply” to my review amounted to...</td>\n",
        "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
        "      <td>2021-03-08 15:07:30</td>\n",
-       "      <td>2021</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -584,7 +606,6 @@
        "      <td>He's a knowledgeable doctor but the way he run...</td>\n",
        "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
        "      <td>2020-07-18 00:13:37</td>\n",
-       "      <td>2020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -595,29 +616,6 @@
        "      <td>Best doctor I've ever had, I never wait to be ...</td>\n",
        "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
        "      <td>2018-05-04 10:30:53</td>\n",
-       "      <td>2018</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.063444e+20</td>\n",
-       "      <td>Tina Sun</td>\n",
-       "      <td>1467907819586</td>\n",
-       "      <td>1</td>\n",
-       "      <td>I was told he is a good doctor. I was trying t...</td>\n",
-       "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
-       "      <td>2016-07-07 16:10:19</td>\n",
-       "      <td>2016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.008751e+20</td>\n",
-       "      <td>James Haynes</td>\n",
-       "      <td>1480683415081</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Takes the time to actually get to know his pat...</td>\n",
-       "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
-       "      <td>2016-02-12 12:56:55</td>\n",
-       "      <td>2016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -628,31 +626,26 @@
        "0  1.014719e+20   Julie A. Gerber  1628003250740       1   \n",
        "1  1.154772e+20  Martin Sheffield  1595031217005       5   \n",
        "2  1.018050e+20      Brian Truett  1522924253567       5   \n",
-       "3  1.063444e+20          Tina Sun  1467907819586       1   \n",
-       "4  1.008751e+20      James Haynes  1480683415081       5   \n",
        "\n",
        "                                                text  \\\n",
        "0  Update: Their “reply” to my review amounted to...   \n",
        "1  He's a knowledgeable doctor but the way he run...   \n",
        "2  Best doctor I've ever had, I never wait to be ...   \n",
-       "3  I was told he is a good doctor. I was trying t...   \n",
-       "4  Takes the time to actually get to know his pat...   \n",
        "\n",
-       "                                 gmap_id    time_normalizado  year  \n",
-       "0  0x8893863ea87bd5dd:0x9383ebf973e74abb 2021-03-08 15:07:30  2021  \n",
-       "1  0x8893863ea87bd5dd:0x9383ebf973e74abb 2020-07-18 00:13:37  2020  \n",
-       "2  0x8893863ea87bd5dd:0x9383ebf973e74abb 2018-05-04 10:30:53  2018  \n",
-       "3  0x8893863ea87bd5dd:0x9383ebf973e74abb 2016-07-07 16:10:19  2016  \n",
-       "4  0x8893863ea87bd5dd:0x9383ebf973e74abb 2016-02-12 12:56:55  2016  "
+       "                             business_id           timestamp  \n",
+       "0  0x8893863ea87bd5dd:0x9383ebf973e74abb 2021-03-08 15:07:30  \n",
+       "1  0x8893863ea87bd5dd:0x9383ebf973e74abb 2020-07-18 00:13:37  \n",
+       "2  0x8893863ea87bd5dd:0x9383ebf973e74abb 2018-05-04 10:30:53  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_clean.head(5)"
+    "# chequeamos los resultados\n",
+    "df_final_florida.head(3)"
    ]
   },
   {
@@ -661,46 +654,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Valores que deseas conservar en la columna \"year\"\n",
-    "valores_a_mantener = [2014, 2015, 2016 , 2017, 2018 , 2019 , 2020 , 2021]\n",
-    "# Eliminar los valores de la columna \"year\" que no están en la lista de valores_a_mantener\n",
-    "df_clean1 = df_clean[df_clean[\"year\"].isin(valores_a_mantener)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_final_florida=df_clean1.drop(['year'],axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1649037, 7)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_final_florida.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dataframe listo para usar : df_final_florida "
+    "# Exportamos el df \n",
+    "df_final_florida.to_csv('florida.csv', index=False)"
    ]
   }
  ],
@@ -720,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
