--- a/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Pennsylvania.ipynb
+++ b/Sprint 2 Ingenieria de Datos/ETL_google/ETL_Pennsylvania.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,21 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[WinError 2] El sistema no puede encontrar el archivo especificado: '.\\\\pennsylvania_data'\n",
-      "e:\\HENRY\\Proyecto Final\\PO_2\\Proyecto-Grupal-Google-yelp\\Sprint 2 Ingenieria de Datos\\ETL_google\\pennsylvania_data\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "c:\\Users\\sebas\\OneDrive\\Escritorio\\Proyecto-Grupal-Google-yelp\\Sprint 2 Ingenieria de Datos\\ETL_google\\pennsylvania_data\n",
       "finalizo cargan de datos\n"
      ]
     }
@@ -65,107 +58,6 @@
     "        # Concatenar los datos del archivo al DataFrame principal\n",
     "        df_pennsylvania = pd.concat([df_pennsylvania, data], axis=0)\n",
     "print(\"finalizo cargan de datos\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>time</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>text</th>\n",
-       "      <th>pics</th>\n",
-       "      <th>resp</th>\n",
-       "      <th>gmap_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.049447e+20</td>\n",
-       "      <td>Jaron Whitfield</td>\n",
-       "      <td>1517731762839</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Joe is quite unique of his line of work, he as...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.176097e+20</td>\n",
-       "      <td>Jonathan McCarthy</td>\n",
-       "      <td>1476276291163</td>\n",
-       "      <td>5</td>\n",
-       "      <td>For such a small place their impact on my life...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.105632e+20</td>\n",
-       "      <td>Rocky Kev</td>\n",
-       "      <td>1338826945578</td>\n",
-       "      <td>5</td>\n",
-       "      <td>I usually give them a call before I stop by to...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        user_id               name           time  rating   \n",
-       "0  1.049447e+20    Jaron Whitfield  1517731762839       5  \\\n",
-       "1  1.176097e+20  Jonathan McCarthy  1476276291163       5   \n",
-       "2  1.105632e+20          Rocky Kev  1338826945578       5   \n",
-       "\n",
-       "                                                text  pics  resp   \n",
-       "0  Joe is quite unique of his line of work, he as...  None  None  \\\n",
-       "1  For such a small place their impact on my life...  None  None   \n",
-       "2  I usually give them a call before I stop by to...  None  None   \n",
-       "\n",
-       "                                 gmap_id  \n",
-       "0  0x89c6c63c8cd87141:0x54d0d283872eecbb  \n",
-       "1  0x89c6c63c8cd87141:0x54d0d283872eecbb  \n",
-       "2  0x89c6c63c8cd87141:0x54d0d283872eecbb  "
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Visualizamos el dataframe \n",
-    "df_pennsylvania.head(3)"
    ]
   },
   {
@@ -223,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +163,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,88 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>time_normalizado</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>text</th>\n",
-       "      <th>gmap_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>104944742559079759872.0</td>\n",
-       "      <td>Jaron Whitfield</td>\n",
-       "      <td>04/02/18 08:09:22</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Joe is quite unique of his line of work, he as...</td>\n",
-       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>117609702832980328448.0</td>\n",
-       "      <td>Jonathan McCarthy</td>\n",
-       "      <td>12/10/16 12:44:51</td>\n",
-       "      <td>5</td>\n",
-       "      <td>For such a small place their impact on my life...</td>\n",
-       "      <td>0x89c6c63c8cd87141:0x54d0d283872eecbb</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   user_id               name   time_normalizado  rating   \n",
-       "0  104944742559079759872.0    Jaron Whitfield  04/02/18 08:09:22       5  \\\n",
-       "1  117609702832980328448.0  Jonathan McCarthy  12/10/16 12:44:51       5   \n",
-       "\n",
-       "                                                text   \n",
-       "0  Joe is quite unique of his line of work, he as...  \\\n",
-       "1  For such a small place their impact on my life...   \n",
-       "\n",
-       "                                 gmap_id  \n",
-       "0  0x89c6c63c8cd87141:0x54d0d283872eecbb  \n",
-       "1  0x89c6c63c8cd87141:0x54d0d283872eecbb  "
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Visualizamos el dataframe \n",
-    "df_pennsylvania.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +199,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +220,7 @@
        "33568"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +256,7 @@
        "(1328047, 6)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
