--- a/Sprint 2 Ingenieria de Datos/pipeline ETL/google/ETL_metadataCOPY.ipynb
+++ b/Sprint 2 Ingenieria de Datos/pipeline ETL/google/ETL_metadataCOPY.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,12 +77,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Eliminamos columna MISC\n",
     "df_metadata.drop(columns=['MISC'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminamos columna MISC\n",
+    "df_metadata.drop(columns=['category'], inplace=True)"
    ]
   },
   {
@@ -96,38 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                                                 [Pharmacy]\n",
-       "1                                         [Textile exporter]\n",
-       "2                                        [Korean restaurant]\n",
-       "3                                             [Fabric store]\n",
-       "4                                             [Fabric store]\n",
-       "                                 ...                        \n",
-       "3025006                                    [Restaurant, Bar]\n",
-       "3025007                                   [Trucking company]\n",
-       "3025008                           [Beauty salon, Hair salon]\n",
-       "3025009    [Truck accessories store, Powder coating service]\n",
-       "3025010                                         [Campground]\n",
-       "Name: category, Length: 3025011, dtype: object"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_metadata['category']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +117,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +154,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,12 +186,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cambio el nombre de la columna gmap_id a business_id \n",
     "df_metadata.rename(columns={'gmap_id': 'business_id'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_5156\\2253121525.py:5: FutureWarning: The geopandas.dataset module is deprecated and will be removed in GeoPandas 1.0. You can get the original 'naturalearth_lowres' data from https://www.naturalearthdata.com/downloads/110m-cultural-vectors/.\n",
+      "  us_states = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point\n",
+    "\n",
+    "# Cargar los datos de los estados de Estados Unidos desde Natural Earth\n",
+    "us_states = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
+    "\n",
+    "# Función para obtener el estado dado una latitud y longitud\n",
+    "def obtener_estado(lat, lon):\n",
+    "    point = Point(lon, lat)\n",
+    "    for index, state in us_states.iterrows():\n",
+    "        if state['geometry'].contains(point):\n",
+    "            return state['name']\n",
+    "    return None\n",
+    "\n",
+    "# Aplicar la función a cada fila del DataFrame y crear una nueva columna 'state'\n",
+    "df_metadata['state'] = df_metadata.apply(lambda row: obtener_estado(row['latitude'], row['longitude']), axis=1)\n"
    ]
   },
   {
