--- a/Sprint 2 Ingenieria de Datos/pipeline ETL/yelp/ETL_reviews.ipynb
+++ b/Sprint 2 Ingenieria de Datos/pipeline ETL/yelp/ETL_reviews.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ast              # Módulo de Árboles de Sintaxis Abstracta\n",
-    "import pandas as pd     # Librería para manipular datasets\n",
-    "import pyarrow as pa    # Útil para operaciones de lectura y escritura de datos\n",
-    "import pyarrow.parquet as pq   # Útil para leer y escribir datos en formato Parquet de manera eficiente\n",
-    "import os               # creación de directorios y comprobación de existencia\n",
-    "import matplotlib.pyplot as plt\n",
+    "# importamos librerias\n",
+    "import ast              \n",
+    "import pandas as pd    \n",
+    "import pyarrow as pa    \n",
+    "import pyarrow.parquet as pq   \n",
+    "import os               \n",
     "from textblob import TextBlob"
    ]
   },
