Creeacion merge_df

--- a/Sprint 2 Ingenieria de Datos/pipeline ETL/google/ETL_florida.ipynb
+++ b/Sprint 2 Ingenieria de Datos/pipeline ETL/google/ETL_florida.ipynb
@@ -58,14 +58,26 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = r\"C:\\Users\\sebas\\OneDrive\\Escritorio\\Proyecto-Grupal-Google-yelp\\Sprint 2 Ingenieria de Datos\\pipeline ETL\\google\\florida_data\\1.json\"\n",
+    "\n",
+    "# Cargar el archivo JSON en un DataFrame de Pandas\n",
+    "df_florida = pd.read_json(path, orient='records', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2850000, 8)"
+       "(150000, 8)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,17 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Elimino la columna pics y resp \n",
-    "df_florida = df_florida.drop(['pics','resp'],axis=1)"
+    "df_florida = df_florida.drop(['pics','resp','name'],axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +120,6 @@
      "output_type": "stream",
      "text": [
       "user_id    0\n",
-      "name       0\n",
       "time       0\n",
       "rating     0\n",
       "text       0\n",
@@ -129,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_25884\\3902782551.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "C:\\Users\\sebas\\AppData\\Local\\Temp\\ipykernel_29260\\3902782551.py:10: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  df_florida['time_normalizado'] = pd.to_datetime(df_florida['time_normalizado'])\n"
      ]
     }
@@ -156,14 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "user_id                    float64\n",
-       "name                        object\n",
        "time                         int64\n",
        "rating                       int64\n",
        "text                        object\n",
@@ -172,7 +182,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +233,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\sebas\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importamos las bibliotecas de procesamiento de texto y análisis de sentimiento\n",
+    "import nltk\n",
+    "nltk.download('vader_lexicon')\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "\n",
+    "# Inicializar el analizador de sentimientos\n",
+    "sia = SentimentIntensityAnalyzer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para asignar valores según la escala de sentimiento\n",
+    "def obtener_puntuacion_sentimiento(texto):\n",
+    "    if pd.isnull(texto) or texto == '':\n",
+    "        return 1  # Devolver neutral si está vacío o es NaN\n",
+    "    elif isinstance(texto, str):\n",
+    "        sentimiento = sia.polarity_scores(texto)\n",
+    "        puntuacion_compuesta = sentimiento['compound']\n",
+    "        if puntuacion_compuesta >= -0.05:\n",
+    "            return 2  # Buena puntuación\n",
+    "        elif puntuacion_compuesta <= -0.05:\n",
+    "            return 0  # Mala puntuación\n",
+    "        else:\n",
+    "            return 1\n",
+    "    else: \n",
+    "        return 1  # Devolver neutral para valores que no son str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertir la columna 'text' a cadena de texto\n",
+    "df_florida['text'] = df_florida['text'].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aplicar la función obtener_puntuacion_sentimiento a la columna 'text'\n",
+    "df_florida['sentiment_analysis'] = df_florida['text'].apply(obtener_puntuacion_sentimiento)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminar la columna 'text' ya que no la necesitamos con 'sentiment_analysis'\n",
+    "df_florida = df_florida.drop(columns=['text'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -248,51 +336,44 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>user_id</th>\n",
-       "      <th>name</th>\n",
        "      <th>rating</th>\n",
-       "      <th>text</th>\n",
        "      <th>business_id</th>\n",
        "      <th>timestamp</th>\n",
+       "      <th>sentiment_analysis</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1.014719e+20</td>\n",
-       "      <td>Julie A. Gerber</td>\n",
        "      <td>1</td>\n",
-       "      <td>Update: Their “reply” to my review amounted to...</td>\n",
        "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
        "      <td>2021-03-08 15:07:30</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1.154772e+20</td>\n",
-       "      <td>Martin Sheffield</td>\n",
        "      <td>5</td>\n",
-       "      <td>He's a knowledgeable doctor but the way he run...</td>\n",
        "      <td>0x8893863ea87bd5dd:0x9383ebf973e74abb</td>\n",
        "      <td>2020-07-18 00:13:37</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        user_id              name  rating  \\\n",
-       "0  1.014719e+20   Julie A. Gerber       1   \n",
-       "1  1.154772e+20  Martin Sheffield       5   \n",
+       "        user_id  rating                            business_id  \\\n",
+       "0  1.014719e+20       1  0x8893863ea87bd5dd:0x9383ebf973e74abb   \n",
+       "1  1.154772e+20       5  0x8893863ea87bd5dd:0x9383ebf973e74abb   \n",
        "\n",
-       "                                                text  \\\n",
-       "0  Update: Their “reply” to my review amounted to...   \n",
-       "1  He's a knowledgeable doctor but the way he run...   \n",
-       "\n",
-       "                             business_id           timestamp  \n",
-       "0  0x8893863ea87bd5dd:0x9383ebf973e74abb 2021-03-08 15:07:30  \n",
-       "1  0x8893863ea87bd5dd:0x9383ebf973e74abb 2020-07-18 00:13:37  "
+       "            timestamp  sentiment_analysis  \n",
+       "0 2021-03-08 15:07:30                   0  \n",
+       "1 2020-07-18 00:13:37                   0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,16 +385,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1649037, 6)"
+       "(91766, 5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
